# digtick

./: .coveragerc  .gitignore  .tpp.conf  MANIFEST.in  README.md  pyproject.toml  run_tests
.github/workflows/: CI.yml  tests.yml
digtool/: ActionDigitalTimingDiagram.py  ActionEqual.py  ActionKVDiagram.py  ActionParse.py  ActionPrintTable.py  ActionRandom.py  ActionRandomTable.py  ActionSynthesize.py  ActionTable.py  ActionTransform.py  ExpressionFormatter.py  ExpressionParser.py  QuineMcCluskey.py  RandomDist.py  ValueTable.py  __main__.py
examples/: 7447.txt  7447_dc.txt  awful.circ  awful_digtick.txt  awful_logisim.txt  complex-ff.circ  counter_5bit.circ  equations.txt  formula_examples_tex.tex  formula_examples_typst.typ  full-adder.circ  logisim_full_adder.txt  mutate_me.circ  simple-ff.circ  table1.txt  table2.txt
scripts/: command_line_coverage  command_line_coverage.py  create_example_tex_typst  run_all_readme_commands  svg2png  test_tex  test_typst
scripts/reference/: 005339be460f5c13f1dc800f39c3b7ee-stdout.txt  015545e99719db2c3d99da7c642a1871-stdout.txt  02424326b93144d5329feaa5d9e7b281-stdout.txt  055655b4002d53f95bf0743a12716df5-stdout.txt  0c6b8c52358fd899f894dcb87712d768-stdout.txt  114e3229bbed02956f823f76742c4bc6-stdout.txt  14a548df192a3976e0c1b0935df140ae-stdout.txt  17157753039c31c18a207ba5a2492a5a-stdout.txt  1b441290f21f50aa333a68d9395b876a-stdout.txt  1b4a3fa33b07cf22078db28d65b471d8-stdout.txt  1c719893171191083e3d02d730f4df43-stdout.txt  1ee89d8b8ab251599218503d95bf6c0f-stdout.txt  1f96a44243884eb6dbd1b94df85c6040-stdout.txt  20a43b477919e4d3384579f5d5604436-stdout.txt  26ebc549dc31fb97f0cf4d1fb6b1b2d0-stdout.txt  2c6dfaa32a6086524957e2e13ed29751-stdout.txt  2fa31ec52cde86ce489f6ac9b3fdb188-stdout.txt  307c5bee2ba1135520e5ac9f38b80cca-stdout.txt  30a66fe99d41dab0e8102310157ac400-stdout.txt  32eb965183410ec5660ba35b674cfca8-stdout.txt  341e2a4cb3d5a3daef5ad9ef5d9e2ff7-stdout.txt  378c017be00cdc341f47c70c278f3309-stdout.txt  39efc9a804812da8228eff2c4fc5c955-stdout.txt  3ba620e16ca2be9bb2ceaa44fdf5adca-stdout.txt  3beaaa4ba961d503c75a60e99d7ddd90-stdout.txt  3ed02e803eb23a45923f0313d0c493c3-stdout.txt  423c5a519f279f627e8e3d47176677ae-stdout.txt  458e9b0ae83bb6cb0d97e4dfde7a4db1-stdout.txt  46d3a0e3056f1e714ca49e33613e6cff-stdout.txt  47cade3974d2c8d15d880f0150f874d2-stdout.txt  4d5aa5a9d1a8589f2ce1e62d4402fb12-stdout.txt  4e07c08a2cf375421ba87d04f567b71a-stdout.txt  530def24a996a2745d62a164827902ab-stdout.txt  546f2af1d2d9a381164e699480a4505c-stdout.txt  574cdca05ad1c4a9b9c692dde123d857-stdout.txt  5918b6e5d602be4191ffad6e4b333b97-stdout.txt  5d9609b2fd457d3e88290b483caeed83-stdout.txt  5e65d488a82e99d9f96ae36e30c7812a-stdout.txt  60e6cb875af8a8b1c4b024e6426520e7-stdout.txt  64436b6db783881d703397cca333542f-stdout.txt  (+48 more)
src/digtick/: ActionAnalyzeSequential.py  ActionDTDCreate.py  ActionDTDRender.py  ActionDiffTable.py  ActionEqual.py  ActionKVDiagram.py  ActionMakeTable.py  ActionMutateCircuit.py  Enums.py  (+28 more)
(+63 files in other folders)
