[build-system]
requires = [ "setuptools>=77.0.3" ]
build-backend = "setuptools.build_meta"

[project]
name = "digtick"
license = "GPL-3.0"
version = "0.0.1rc0"
description = "A command-line tool for computing digital circuits"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Johannes Bauer", email = "joe@johannes-bauer.com" } ]
keywords = [ "digital", "electronics", "boolean-logic", "boolean-expression", "cli", "teaching" ]
classifiers = [
	"Programming Language :: Python :: 3",
]
dependencies = [
	"pysvgedit",
]

[project.urls]
Homepage = "https://github.com/johndoe31415/digtick"
Repository = "https://github.com/johndoe31415/digtick.git"
Issues = "https://github.com/johndoe31415/digtick/issues"
Releases = "https://github.com/johndoe31415/digtick/tags"

[project.scripts]
digtick = "digtick.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = [ "src" ]
